--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -25,6 +25,7 @@
           {% endif %}
           <a href="{{ site.github.repository_url }}" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
+        <a href="{{site.baseurl}}/build">Build</a>
       </div>
     </header>
 
