--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -25,7 +25,11 @@
           {% endif %}
           <a href="{{ site.github.repository_url }}" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
+        <a href="{{site.baseurl}}/">Home</a>
         <a href="{{site.baseurl}}/build">Build</a>
+        <a href="{{site.baseurl}}/application">Application Challenges</a>
+        <a href="{{site.baseurl}}/platform">Platform Challenges</a>
+        <a href="{{site.baseurl}}/sources">Sources</a>
       </div>
     </header>
 
