--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -13,7 +13,7 @@
 
     <header>
       <div class="container">
-        <a id="a-title" href="{{ '/' | site.title }}">
+        <a id="a-title" href="{{ '/' | relative_url }}">
           <h1>{{ site.title | default: site.github.repository_name }}</h1>
         </a>
         <h2>{{ site.description | default: site.github.project_tagline }}</h2>
@@ -25,11 +25,11 @@
           {% endif %}
           <a href="{{ site.github.repository_url }}" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
-        <a href="{{site.baseurl}}/">Home</a>
-        <a href="{{site.baseurl}}/build">Build</a>
-        <a href="{{site.baseurl}}/application">Application Challenges</a>
-        <a href="{{site.baseurl}}/platform">Platform Challenges</a>
-        <a href="{{site.baseurl}}/sources">Sources</a>
+        <a href="{{site.baseurl}}/">>home</a>
+        <a href="{{site.baseurl}}/build">>build</a>
+        <a href="{{site.baseurl}}/application">>application_challenges</a>
+        <a href="{{site.baseurl}}/platform">>platform_challenges</a>
+        <a href="{{site.baseurl}}/sources">>sources</a>
       </div>
     </header>
 
