--- a/docs/_layouts/default.html
+++ b/docs/_layouts/default.html
@@ -25,10 +25,10 @@
           {% endif %}
           <a href="{{ site.github.repository_url }}" class="btn btn-github"><span class="icon"></span>View on GitHub</a>
         </section>
-        <a href="{{site.baseurl}}/">>home</a>
-        <a href="{{site.baseurl}}/build">>build</a>
-        <a href="{{site.baseurl}}/application">>application_challenges</a>
-        <a href="{{site.baseurl}}/platform">>platform_challenges</a>
+        <a href="{{site.baseurl}}/">>home</a><br/>
+        <a href="{{site.baseurl}}/build">>build</a><br/>
+        <a href="{{site.baseurl}}/application">>application_challenges</a><br/>
+        <a href="{{site.baseurl}}/platform">>platform_challenges</a><br/>
         <a href="{{site.baseurl}}/sources">>sources</a>
       </div>
     </header>
